# tailorit-backend

./: .gitignore  README.md  justfile  main.py  pre-commit-config.yaml  pyproject.toml
app/: config.py  constants.py  dependencies.py  main.py
app/api/: router.py
app/api/endpoints/: files.py  filesystem.py  folders.py  test.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth_health_check.py  filesystem.py
app/database/repositories/: __init__.py  filesystem_repository.py  storage_repository.py
app/database/supabase/: filesystem.py  storage.py
app/database/supabase_postgres/: __init__.py
app/database/supabase_storage/: __init__.py
app/models/: file.py  folder.py  user.py
app/services/: filesystem_service.py
app/utils/: auth.py  decorators.py  exception_handlers.py  exceptions.py  logger.py  response.py
app/utils/auth_utils/: __init__.py
docs/: filesystem-api-guide.md  frontend-api-guide.md  supabase_cli.md
supabase/migrations/: 20250526000954_remote_schema.sql
