[project]
name = "tailorit-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "fastapi[standard]>=0.115.12",
    "just>=0.8.162",
    "pdflatex>=0.1.3",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.9.0",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.40",
    "supabase>=2.15.0",
]
